{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 8,
  "lineage": "c5bef589-0c5c-815c-0ff9-6ee13954a5a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:015364654144:instance/i-02e25dd2927ba3c50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e25dd2927ba3c50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043a9302f0283474d",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-54-196-137-68.compute-1.amazonaws.com",
            "public_ip": "54.196.137.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021411f129f562179",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8e5ddc5b418e330",
            "tags": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "tags_all": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b01831b11aea6212"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015364654144:internet-gateway/igw-05e660575232a2897",
            "id": "igw-05e660575232a2897",
            "owner_id": "015364654144",
            "tags": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "tags_all": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "vpc_id": "vpc-0d15040bf79162f31"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015364654144:route-table/rtb-0456f2f989492168a",
            "id": "rtb-0456f2f989492168a",
            "owner_id": "015364654144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e660575232a2897",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "tags_all": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d15040bf79162f31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035ae603d5dfaedd1",
            "route_table_id": "rtb-0456f2f989492168a",
            "subnet_id": "subnet-0c8e5ddc5b418e330"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015364654144:security-group/sg-0b01831b11aea6212",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b01831b11aea6212",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "015364654144",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "tags_all": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d15040bf79162f31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015364654144:subnet/subnet-0c8e5ddc5b418e330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8e5ddc5b418e330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015364654144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "tags_all": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "vpc_id": "vpc-0d15040bf79162f31"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015364654144:vpc/vpc-0d15040bf79162f31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdea339cbbb44563",
            "default_route_table_id": "rtb-09f141285b0b29c2c",
            "default_security_group_id": "sg-0af4526c541fc5a69",
            "dhcp_options_id": "dopt-00d7ba17cc6519398",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d15040bf79162f31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f141285b0b29c2c",
            "owner_id": "015364654144",
            "tags": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            },
            "tags_all": {
              "billing_code": "dfsdfg",
              "company": "Globomantics",
              "project": "Globomantics-rwerw"
            }
          }
        }
      ]
    }
  ]
}